fix: Hide vertical scrollbar on cookie banner

--- a/src/sass/_patterns-modal.scss
+++ b/src/sass/_patterns-modal.scss
@@ -41,6 +41,7 @@ $breakpoint-small-banner: 320px;
       box-shadow: $box-shadow--deep;
       max-width: 100%;
       width: 100%;
+      overflow: hidden;
     }
 
     .p-modal__header {
